[gd_scene load_steps=9 format=2]

[ext_resource path="res://multiplayer/script_fundo_multiplayer.gd" type="Script" id=1]
[ext_resource path="res://fotos/imagenespaco.jpg" type="Texture" id=2]
[ext_resource path="res://BlackOpsOne-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.921569, 0.976471, 0.0980392, 0.360784 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.921569, 0.270588, 0.137255, 0.360784 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 2000, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 512, 302.5 )
scale = Vector2( 0.817187, 0.859722 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1494.87, 293.968 )
rotation = 3.13988
scale = Vector2( 0.784743, 0.909453 )
texture = ExtResource( 2 )

[node name="VidaPlayerUm" type="ProgressBar" parent="ParallaxBackground"]
margin_left = 15.0
margin_top = 567.0
margin_right = 271.0
margin_bottom = 588.0
custom_styles/fg = SubResource( 3 )
max_value = 5.0
step = 1.0
value = 4.0

[node name="VidaPlayerDois" type="ProgressBar" parent="ParallaxBackground"]
margin_left = 758.0
margin_top = 564.0
margin_right = 1014.0
margin_bottom = 585.0
custom_styles/fg = SubResource( 4 )
max_value = 5.0
step = 1.0
value = 4.0

[node name="Tempo" type="Label" parent="ParallaxBackground"]
margin_left = 477.0
margin_top = 529.0
margin_right = 584.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 1 )
text = "00"

[node name="Timer" type="Timer" parent="ParallaxBackground"]
autostart = true

[node name="Abates" type="Label" parent="ParallaxBackground"]
margin_left = 697.0
margin_top = 9.0
margin_right = 1003.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
text = "Abates: 0"

[node name="VidaDupla" type="Label" parent="ParallaxBackground"]
margin_left = 187.0
margin_top = 8.0
margin_right = 615.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 5 )
text = "Vida da Dupla: 0"

[connection signal="timeout" from="ParallaxBackground/Timer" to="ParallaxBackground" method="_on_contador_timeout"]
